# finance-tracker

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.test  README.md  bot.service  docker-compose.init.yml  docker-compose.pi.yml  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  pyproject.toml  test.db
.github/workflows/: publish-ghcr.yml
api/: auth.py  db.py  dependencies.py  main.py  models.py  schemas.py
api/routers/: analytics.py  configuration.py  tracking.py  transactions.py
certbot/: Dockerfile
docs/: analysis_tab_specification.md  deployment_gce_desec.md  deployment_raspberry_pi_tailscale.md  github_copilot_instruction_spec.md  migration_specification.md  reference_ui.js  telegram_bot_specification.md  test_suite_specifcation.md  webapp_feature_specs.md
frontend/: Dockerfile.test  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
migrations/: migrate_v2_add_status.py
nginx/: nginx.conf  nginx.init.conf.template  nginx.prod.conf.template
scripts/: add_tracking_column.py  deploy_gce.sh  deploy_pi_tailscale.sh  migrate_csv_to_sql.py  modify_csv.py  reset_users.py  test_http_post.py  view_db.py
src/: analytics.py  bot_interface.py  config.py  llm_helper.py  main.py  models.py  parser.py  security.py  storage.py  utils.py
src/banks/: __init__.py  base.py  (+1 more)
tests/: conftest.py  test_analytics.py  test_analytics_account.py  test_categories.py  test_keywords.py  test_llm_parser.py  test_parser.py  test_storage_commands.py  test_uob_comma.py
(+39 files in other folders)
