[project]
name = "finance-tracker"
version = "0.1.0"
description = "Telegram bot for tracking personal finance"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "python-telegram-bot>=21.0",
    "python-dateutil>=2.8.2",
    "python-dotenv>=1.0.0",
    "google-genai>=1.56.0",
    "pytest>=8.0.0",
    "cryptography>=46.0.3",
]


[project.optional-dependencies]
backend = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy>=2.0.25",
    "pydantic>=2.6.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt==4.0.1",
    "python-multipart>=0.0.9",
    "cryptography>=42.0.0",
]
